--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,29 @@ jobs:
   pr_check:
     docker:
       - image: circleci/openjdk:11.0.1-jdk-stretch
+      - image: circleci/mysql:8.0.18
+        environment: 
+          MYSQL_ROOT_PASSWORD: Sarthak@89 
+          MYSQL_DATABSE: db
     steps:
       - checkout # check out source code to working directory
       - run:
-          name: Maven build
+      # Our primary container isn't MYSQL so run a sleep command until it's ready.
+          name: Waiting for MySQL to be ready
           command: |
-            echo "Hello World!"
+            for i in `seq 1 10`;
+            do
+              nc -z 127.0.0.1 3306 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
+      - run:
+          name: Maven build
+          command: mvn compile
+      - run:
+          name: Maven test
+          command: mvn test
 workflows:
   version: 2
   pr-check-workflow:
