--- a/cloudwebapp/pom.xml
+++ b/cloudwebapp/pom.xml
@@ -68,6 +68,11 @@
 			<version>3.0.0.RELEASE</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
