--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
           MYSQL_DATABSE: db
     steps:
       - checkout # check out source code to working directory
+      -run:
+        name: Go to directory
+        command: cd cloudwebapp/
       - run:
       # Our primary container isn't MYSQL so run a sleep command until it's ready.
           name: Waiting for MySQL to be ready
