--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,9 @@ jobs:
           MYSQL_DATABSE: db
     steps:
       - checkout # check out source code to working directory
-      - run:
-        name: Go to directory
-        command: cd cloudwebapp/
+      # - run:
+      #   name: Go to directory
+      #   command: cd cloudwebapp/
       - run:
       # Our primary container isn't MYSQL so run a sleep command until it's ready.
           name: Waiting for MySQL to be ready
@@ -25,10 +25,10 @@ jobs:
             echo Failed waiting for MySQL && exit 1
       - run:
           name: Maven build
-          command: mvn compile
+          command: cd cloudwebapp/ && mvn compile
       - run:
           name: Maven test
-          command: mvn test
+          command: cd cloudwebapp/ && mvn test
 workflows:
   version: 2
   pr-check-workflow:
