--- a/cloudwebapp/src/main/resources/application.properties
+++ b/cloudwebapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.url=jdbc:mysql://localhost:3306/circle_test
 spring.datasource.username= root
-spring.datasource.password= Sarthak@89
+#spring.datasource.password= Sarthak@89
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
