--- a/cloudwebapp/src/main/resources/application.properties
+++ b/cloudwebapp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/circle_test
+spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.username= root
 spring.datasource.password= Sarthak@89
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
