--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,7 @@ jobs:
           MYSQL_DATABASE: db
     steps:
       - checkout # check out source code to working directory
-      # - run:
-      #   name: Go to directory
-      #   command: cd cloudwebapp/
       - run:
-      # Our primary container isn't MYSQL so run a sleep command until it's ready.
           name: Waiting for MySQL to be ready
           command: |
             for i in `seq 1 10`;
@@ -29,9 +25,41 @@ jobs:
       - run:
           name: Maven test
           command: cd cloudwebapp/ && mvn test
+  build:
+    docker:
+      - image: circleci/openjdk:8-jdk-stretch
+      - image: circleci/mysql:8.0.19
+        environment: 
+          MYSQL_ROOT_PASSWORD: root 
+          MYSQL_DATABASE: userData
+    steps:
+      - checkout
+      - run:
+          name: Waiting for MySQL to be ready
+          command: |
+            for i in `seq 1 10`;
+            do
+              nc -z 127.0.0.1 3306 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
+      - run:
+          name: Maven build
+          command: mvn compile
+      - run:
+          name: Maven test
+          command: mvn test
+
 workflows:
   version: 2
   pr-check-workflow:
     jobs:
     - pr_check
-    
+  build_deploy-workflow:
+    jobs:
+    - build:
+        filters:
+          branches:
+            only:
+              - master
