--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,11 @@ jobs:
           command: cd cloudwebapp/ && mvn test
   build:
     docker:
-      - image: circleci/openjdk:8-jdk-stretch
-      - image: circleci/mysql:8.0.19
+      - image: circleci/openjdk:11.0.1-jdk-stretch
+      - image: circleci/mysql:8.0.18
         environment: 
-          MYSQL_ROOT_PASSWORD: root 
-          MYSQL_DATABASE: userData
+          MYSQL_ROOT_PASSWORD: Sarthak@89 
+          MYSQL_DATABASE: db
     steps:
       - checkout
       - run:
