Adding changes to gitignore

--- a/cloudwebapp/.gitignore
+++ b/cloudwebapp/.gitignore
@@ -31,6 +31,7 @@ hs_err_pid*
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea
 
 # Generated files
 .idea/**/contentModel.xml
@@ -103,6 +104,15 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+*.mvn/wrapper/maven-wrapper.jar
+*.mvn/wrapper/MavenWrapperDownloader.java
+*.mvn/wrapper/maven-wrapper.properties
 
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+
+.classpath
+.project
+HELP.md
+mvnw
+mvnw.cmd
