--- a/cloudwebapp/src/main/resources/application.properties
+++ b/cloudwebapp/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.password=Sarthak@89
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-file-size=5MB
