--- a/cloudwebapp/pom.xml
+++ b/cloudwebapp/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.11.500</version>
+        </dependency>
     </dependencies>
 
     <build>
