--- a/cloudwebapp/src/main/resources/application.properties
+++ b/cloudwebapp/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db
-spring.datasource.username=root
-spring.datasource.password=Sarthak@89
+spring.datasource.url=${awsRDS:jdbc:mysql://localhost:3306/db}
+spring.datasource.username=${username:root}
+spring.datasource.password=${password:Sarthak@89}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${DBCreationType:create}
 spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=${profile:local}
+amazon.s3.bucketName=${bucketName}
 path.to.file=/var/tmp/
 spring.servlet.multipart.max-file-size=5MB
