Adding logger statments

--- a/cloudwebapp/src/main/resources/application.properties
+++ b/cloudwebapp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${awsRDS:jdbc:mysql://localhost:3306/db}
+spring.datasource.url=${awsRDS:jdbc:mysql://localhost:3306/db?serverTimezone=UTC}
 spring.datasource.username=${username:root}
 spring.datasource.password=${password:Sarthak@89}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
