--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,7 @@ jobs:
           name: Zip Artifact
           command: |
             echo "current build number is ${CIRCLE_BUILD_NUM}"
+            echo "current directory"
             pwd
             echo "current directory content"
             ls -al
@@ -81,8 +82,12 @@ jobs:
             cp ../cloudwebapp/target/cloudwebapp-0.0.1-SNAPSHOT.jar .
             echo "current directory content"
             ls -al
+            echo "Copying the properties from /webapp/cloud-ninja/src/main/resources to the codedeploy_artifact"
+            cp ../cloudwebapp/src/main/resources/*.* .
             echo "Zipping all files in the codedeploy_artifact directory"
             zip -r csye6255-webapp-${CIRCLE_BUILD_NUM}.zip .
+            echo "Removing the files except for the zip file from the directory"
+            rm *.yml *.sh *.jar *.properties *.json *.xml
             ls -al
             pwd
             echo "Changing directory to root"
