Adding changes for Assignment10 webapp

--- a/cloudwebapp/src/main/resources/application.properties
+++ b/cloudwebapp/src/main/resources/application.properties
@@ -8,5 +8,8 @@ spring.jpa.hibernate.ddl-auto=${DBCreationType:create}
 spring.jpa.properties.hibernate.format_sql=true
 spring.profiles.active=${profile:local}
 amazon.s3.bucketName=${bucketName}
+amazon.domain.name=${domainName:prod.sarthakgoel.me}
+amazon.sqs.url=${sqsURL}
+sns.topic.arn=${snsARN}
 path.to.file=/var/tmp/
 spring.servlet.multipart.max-file-size=5MB
